tests/fixtures/diagnostics/error-plain.stderr
Error: "Something went wrong"
  ╷
1 │ @error "Something went wrong";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  ╵
  error-plain.scss 1:1  root stylesheet
